syntax = "proto3";

option csharp_namespace = "GameNest.Grpc.Carts";
package carts;

service CartGrpcService {
  rpc GetCartByUserId (GetCartByUserIdRequest) returns (CartResponse);
  rpc ClearCart (ClearCartRequest) returns (ClearCartResponse);
}

message GetCartByUserIdRequest {
  string userId = 1;
}

message ClearCartRequest {
  string userId = 1;
}

message ClearCartResponse {
  bool success = 1;
}

message CartResponse {
  Cart cart = 1;
}

message Cart {
  string userId = 1;
  repeated CartItem items = 2;
}

message CartItem {
  string productId = 1;
  int32 quantity = 2;
  double price = 3;
  string product_title = 4;
}
