syntax = "proto3";
option csharp_namespace = "GameNest.Grpc.Orders";
package orders;

service OrderGrpcService {
  rpc GetAllOrders (GetAllOrdersRequest) returns (OrdersResponse);
  rpc GetOrderById (GetOrderByIdRequest) returns (OrderResponse);
}

message GetAllOrdersRequest {}

message GetOrderByIdRequest {
  string id = 1;
}

message OrdersResponse {
  repeated Order items = 1;
}

message OrderResponse {
  Order order = 1;
}

message Order {
  string id = 1;
  string customerId = 2;
  string orderDate = 3;
  string status = 4;
  double totalAmount = 5;
  string createdAt = 6;
  string updatedAt = 7;
}